// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when desktop width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    <h2
      className="consonant-filters-info--title"
      data-testid="title"
    >
      i18n.title
    </h2>
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      i18n.totalResultsText {total}
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when mobile width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--search"
  >
    <div
      data-testid="filters-info__search-component"
    />
  </div>
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with search 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with select 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with two children 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;
